[package]
name = "stupid-eth-client"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy" }
alloy-primitives = { version = "0.6" }
jsonrpsee = { version = "0.21.0", features = ["http-client", "macros"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
serde_json = "1.0.111"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3"}
